--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   </head>
-  <body data-home-page="https://nordmedia.nicepage.io/en.html?version=be4479d4-919a-4212-9e21-c2c3c1e81000" data-home-page-title="en" class="u-body u-xl-mode" data-lang="en" data-lang-ru="{&quot;head-title&quot;:&quot;Media Club Nord - Principal&quot;,&quot;head-keywords&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;,&quot;head-description&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;}"> 
+  <body data-home-page="https://nordmedia.nicepage.io/en.html?version=dc3a8a1c-fb82-420d-bfa4-3febc8b70f8f" data-home-page-title="en" class="u-body u-xl-mode" data-lang="en" data-lang-ru="{&quot;head-title&quot;:&quot;Media Club Nord - Principal&quot;,&quot;head-keywords&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;,&quot;head-description&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;}"> 
     <section class="skrollable u-clearfix u-shading u-video u-section-1" id="sec-7c90">
       <div class="u-background-video u-expanded" style="filter: brightness(0.15);">
         <div class="embed-responsive embed-responsive-1">
@@ -350,7 +350,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
                 <div class="u-container-layout u-valign-middle u-container-layout-5">
                   <h4 class="u-custom-font u-font-montserrat u-text u-text-6" data-lang-ru="​​Alexandru Codreanu&amp;nbsp;"> Alexandru Codreanu</h4>
                   <h5 class="u-text u-text-custom-color-1 u-text-7" data-lang-ru="​​Interviewer"> Interviewer</h5>
-                  <p class="u-text u-text-8" data-lang-ru="​​​Alex Codrean coordinates with the youth show from Balti &quot;Trophy Mirror&quot; - the show dedicated to promoting the Balti scholarship holders."> Alex Codryan coordinates the work with the youth show in the municipality of Balti "Mirror of the Trophy" - a show dedicated to the promotion of Balti scholarship holders.</p>
+                  <p class="u-text u-text-8" data-lang-ru="​​​Alex Codrean coordinates with the youth show from Balti &quot;Trophy Mirror&quot; - the show dedicated to promoting the Balti scholarship holders."> Alexandru Codreanu coordinates the work with the youth show in the municipality of Balti "Mirror of the Trophy" - a show dedicated to the promotion of Balti scholarship holders.</p>
                   <div class="u-social-icons u-spacing-10 u-social-icons-2">
                     <a class="u-social-url" title="facebook" target="_blank" href="https://facebook.com/name"><span class="u-icon u-social-facebook u-social-icon u-text-white u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-9089"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-9089"><path fill="currentColor" d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2
 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
@@ -482,6 +482,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-5.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-6.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
