--- a/ro.html
+++ b/ro.html
@@ -348,7 +348,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
                 <div class="u-container-layout u-valign-middle-xl u-container-layout-5">
                   <h4 class="u-custom-font u-font-montserrat u-text u-text-6" data-lang-ru="​​Alexandru Codreanu&amp;nbsp;"> Alexandru Codreanu</h4>
                   <h5 class="u-text u-text-custom-color-1 u-text-7" data-lang-ru="​​Interviewer"> Intervievator</h5>
-                  <p class="u-text u-text-8" data-lang-ru="​​​Alex Codrean coordinates with the youth show from Balti &quot;Trophy Mirror&quot; - the show dedicated to promoting the Balti scholarship holders."> Alex Codrean coordonează cu emisiunea pentru tineri din
+                  <p class="u-text u-text-8" data-lang-ru="​​​Alex Codrean coordinates with the youth show from Balti &quot;Trophy Mirror&quot; - the show dedicated to promoting the Balti scholarship holders."> Alex Codreanu coordonează cu emisiunea pentru tineri din
 municipiul Bălți_”Oglinda Trofeului”- emisiunea dedicată promovării bursierilor
 bălțeni.</p>
                   <div class="u-social-icons u-spacing-10 u-social-icons-2">
@@ -484,6 +484,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-5.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-6.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
