Bug fixes... Block of "Oru mission"

--- a/en.html
+++ b/en.html
@@ -110,7 +110,7 @@
     </section>
     <section class="u-clearfix u-grey-90 u-section-3" id="sec-0006">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-custom-color-1 u-shape u-shape-rectangle u-shape-1"></div>
+        <div class="u-custom-color-1 u-expanded-width-xs u-shape u-shape-rectangle u-shape-1"></div>
         <div class="u-clearfix u-expanded-width-xs u-gutter-8 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
@@ -151,7 +151,7 @@
     </section>
     <section class="u-clearfix u-grey-5 u-section-4" id="sec-e42d">
       <div class="u-clearfix u-sheet u-valign-top-sm u-sheet-1">
-        <div class="u-container-style u-custom-color-1 u-group u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0" data-animation-delay="0">
+        <div class="u-container-style u-custom-color-1 u-expanded-width-xs u-group u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0" data-animation-delay="0">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-text u-text-white u-text-1" data-lang-ru="Our Mission"> Our mission</h2>
             <p class="u-text u-text-white u-text-2" data-lang-ru="​Creation of the First media Studio for young people in Balti within the Youth Center.Development of media skills and media literacy of a group of 30 young people from Balti.Development of the Social Business – ARTStudio within the media studio, with the involvement of team members.​<br>"> Creation of the First media studio for young people in Balti with the support of the Youth Center "CRAT". Development of media skills and media literacy of a group of 30 young people from Balti. Development of a social business – an art studio within a media studio, with the involvement of team members. <br>
