Maybe final fix... OH GOD!

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   </head>
-  <body data-home-page="https://nordmedia.nicepage.io/en.html?version=1ee0fe5c-0a3d-4f70-8ec2-c01c5fde90d2" data-home-page-title="en" class="u-body u-xl-mode" data-lang="en" data-lang-ru="{&quot;head-title&quot;:&quot;Media Club Nord - Principal&quot;,&quot;head-keywords&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;,&quot;head-description&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;}"> 
+  <body data-home-page="https://nordmedia.nicepage.io/en.html?version=144c65b8-779a-4b18-84f7-af64bb2b21c5" data-home-page-title="en" class="u-body u-xl-mode" data-lang="en" data-lang-ru="{&quot;head-title&quot;:&quot;Media Club Nord - Principal&quot;,&quot;head-keywords&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;,&quot;head-description&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;}"> 
     <section class="skrollable u-clearfix u-shading u-video u-section-1" id="sec-7c90">
       <div class="u-background-video u-expanded" style="filter: brightness(0.15);">
         <div class="embed-responsive embed-responsive-1">
@@ -159,7 +159,7 @@
             <a href="#" class="u-border-1 u-border-grey-90 u-link u-no-underline u-text-grey-90 u-link-1"> READ MORE</a>
           </div>
         </div>
-        <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
+        <div class="u-clearfix u-expanded-width-xs u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-col" style="">
               <div class="u-container-style u-layout-cell u-left-cell u-right-cell u-size-30 u-layout-cell-1">
@@ -482,6 +482,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-4.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-20.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
