--- a/ru.html
+++ b/ru.html
@@ -108,7 +108,7 @@
     </section>
     <section class="u-clearfix u-grey-90 u-section-3" id="sec-af50">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-custom-color-1 u-shape u-shape-rectangle u-shape-1"></div>
+        <div class="u-custom-color-1 u-expanded-width-xs u-shape u-shape-rectangle u-shape-1"></div>
         <div class="u-clearfix u-expanded-width-xs u-gutter-8 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
@@ -147,14 +147,14 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-grey-5 u-section-4" id="sec-af91">
+    <section class="u-clearfix u-grey-5 u-section-4" id="sec-1ae2">
       <div class="u-clearfix u-sheet u-valign-top-sm u-sheet-1">
-        <div class="u-container-style u-custom-color-1 u-group u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0" data-animation-delay="0">
+        <div class="u-container-style u-custom-color-1 u-expanded-width-xs u-group u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0" data-animation-delay="0">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-text u-text-white u-text-1" data-lang-ru="Our Mission"> Наша миссия</h2>
             <p class="u-text u-text-white u-text-2" data-lang-ru="​Creation of the First media Studio for young people in Balti within the Youth Center.Development of media skills and media literacy of a group of 30 young people from Balti.Development of the Social Business – ARTStudio within the media studio, with the involvement of team members.​<br>"> Создание Первой медиа студии для молодежи в Бельцах при поддержке Молодежного центра "CRAT". Развитие медиа-навыков и медиа грамотности группы из 30 молодых людей из Бельц. Развитие социального бизнеса – АРТСтудии в рамках медиа студии, с привлечением членов команды. <br>
             </p>
-            <a href="#" class="u-border-1 u-border-grey-90 u-link u-no-underline u-text-grey-90 u-link-1">ПОДРОБНЕЕ</a>
+            <a href="#" class="u-border-1 u-border-grey-90 u-link u-no-underline u-text-grey-90 u-link-1"> ПОДРОБНЕЕ</a>
           </div>
         </div>
         <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
@@ -171,7 +171,7 @@
                   <h2 class="u-text u-text-3" data-lang-ru="Our Goal"> Наши цели</h2>
                   <p class="u-text u-text-4" data-lang-ru="​Opening of the Media studio in Balti, with free access for photo/video lovers and journalistic materials.<br>"> Открытие медиа студии в Бельцах с бесплатным доступом для любителей фото/видео и журналистских материалов.<br>
                   </p>
-                  <a href="#" class="u-border-1 u-border-grey-90 u-link u-no-underline u-text-grey-90 u-link-2">ПОДРОБНЕЕ</a>
+                  <a href="#" class="u-border-1 u-border-grey-90 u-link u-no-underline u-text-grey-90 u-link-2"> ПОДРОБНЕЕ</a>
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@
     </section>
     <section class="u-clearfix u-grey-90 u-section-5" id="sec-88f5">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-clearfix u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-layout-wrap u-layout-wrap-1">
+        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-image u-layout-cell u-left-cell u-size-30 u-image-1" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0" data-image-width="720" data-image-height="1080" data-animation-delay="0">
@@ -482,6 +482,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-15.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-20.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
