--- a/en.html
+++ b/en.html
@@ -159,7 +159,7 @@
             <a href="#" class="u-border-1 u-border-grey-90 u-link u-no-underline u-text-grey-90 u-link-1"> READ MORE</a>
           </div>
         </div>
-        <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
+        <div class="u-clearfix u-expanded-width-xs u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-col" style="">
               <div class="u-container-style u-layout-cell u-left-cell u-right-cell u-size-30 u-layout-cell-1">
@@ -482,6 +482,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-4.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-20.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
