--- a/ro.html
+++ b/ro.html
@@ -188,7 +188,7 @@
                 <div class="u-container-layout"></div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2">
+                <div class="u-container-layout u-valign-middle-xs u-container-layout-2">
                   <img class="u-image u-image-default u-image-2" src="/images/IMG_2255-2.jpg" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0" data-animation-delay="250" data-lang-ru="" data-image-width="720" data-image-height="1080">
                 </div>
               </div>
@@ -484,6 +484,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-20.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-15.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
