THIS IS FINAL VERSION!!!!!

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   </head>
-  <body data-home-page="https://nordmedia.nicepage.io/en.html?version=82b20820-32c0-4403-9daf-26e7440b3d72" data-home-page-title="en" class="u-body u-xl-mode" data-lang="en" data-lang-ru="{&quot;head-title&quot;:&quot;Media Club Nord - Principal&quot;,&quot;head-keywords&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;,&quot;head-description&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;}"> 
+  <body data-home-page="https://nordmedia.nicepage.io/en.html?version=ac191db2-661f-4b28-86ba-51c261b2d9f9" data-home-page-title="en" class="u-body u-xl-mode" data-lang="en" data-lang-ru="{&quot;head-title&quot;:&quot;Media Club Nord - Principal&quot;,&quot;head-keywords&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;,&quot;head-description&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;}"> 
     <section class="skrollable u-clearfix u-shading u-video u-section-1" id="sec-7c90">
       <div class="u-background-video u-expanded" style="filter: brightness(0.15);">
         <div class="embed-responsive embed-responsive-1">
@@ -190,7 +190,7 @@
                 <div class="u-container-layout"></div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2">
+                <div class="u-container-layout u-valign-middle-xs u-container-layout-2">
                   <img class="u-image u-image-default u-image-2" src="/images/IMG_2255-2.jpg" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0" data-animation-delay="250" data-lang-ru="" data-image-width="720" data-image-height="1080">
                 </div>
               </div>
@@ -482,6 +482,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-15.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-13.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
