--- a/ru.html
+++ b/ru.html
@@ -34,7 +34,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="en" data-lang-ru="{&quot;head-title&quot;:&quot;Media Club Nord - Principal&quot;,&quot;head-keywords&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;,&quot;head-description&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;}"> 
-    <section class="skrollable u-clearfix u-shading u-video u-section-1" id="sec-7c90">
+    <section class="skrollable u-clearfix u-shading u-video u-section-1" id="sec-812a">
       <div class="u-background-video u-expanded" style="filter: brightness(0.15);">
         <div class="embed-responsive embed-responsive-1">
           <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/o_kgdCGisso?playlist=o_kgdCGisso&amp;loop=1&amp;mute=1&amp;showinfo=0&amp;controls=0&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
@@ -60,7 +60,7 @@
             </div>
           </div>
         </div>
-        <div class="u-container-style u-group u-group-1">
+        <div class="u-container-style u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-group-1">
           <div class="u-container-layout u-container-layout-4">
             <h1 class="u-text u-title u-text-1" data-lang-ru="​It is useful sometimes to recall your past in order to stronger value your present."> Иногда полезно вспомнить прошлое, чтобы сильнее ценить настоящее.<br>
             </h1>
@@ -179,7 +179,7 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-grey-90 u-section-5" id="sec-88f5">
+    <section class="u-clearfix u-grey-90 u-section-5" id="sec-a210">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
@@ -188,7 +188,7 @@
                 <div class="u-container-layout"></div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2">
+                <div class="u-container-layout u-valign-middle-xs u-container-layout-2">
                   <img class="u-image u-image-default u-image-2" src="/images/IMG_2255-2.jpg" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0" data-animation-delay="250" data-lang-ru="" data-image-width="720" data-image-height="1080">
                 </div>
               </div>
@@ -200,7 +200,7 @@
             <h2 class="u-text u-text-1" data-lang-ru="Our Services"> Наши Услуги</h2>
             <p class="u-text u-text-2" data-lang-ru="​​The project will provide us with space for development and communication, spending useful and developing time, will unite us as a group. The studio and equipment serve as a social business that involves other young people in the activity, providing sources of income by providing photo/video services for payment.<br>"> Организации семинаров по грамотности 30 молодых людей в СМИ <br> Обучения ИТ в работе с программами монтажа и обработки фото и аудио<br>
             </p>
-            <a href="#" class="u-border-1 u-border-white u-link u-no-underline u-text-white u-link-1">ПОДРОБНЕЕ</a>
+            <a href="#" class="u-border-1 u-border-white u-link u-no-underline u-text-white u-link-1"> ПОДРОБНЕЕ</a>
           </div>
         </div>
         <div class="u-custom-color-1 u-shape u-shape-rectangle u-shape-1"></div>
@@ -482,6 +482,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-15.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-13.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
