--- a/ro.html
+++ b/ro.html
@@ -34,7 +34,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="en" data-lang-ru="{&quot;head-title&quot;:&quot;Media Club Nord - Principal&quot;,&quot;head-keywords&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;,&quot;head-description&quot;:&quot;A media studio for young people created and accessible for all those who wish – young Moldovans and refugees, including with special needs.&quot;}"> 
-    <section class="skrollable u-clearfix u-shading u-video u-section-1" id="sec-9887">
+    <section class="skrollable u-clearfix u-shading u-video u-section-1" id="sec-3665">
       <div class="u-background-video u-expanded" style="filter: brightness(0.15);">
         <div class="embed-responsive embed-responsive-1">
           <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/o_kgdCGisso?playlist=o_kgdCGisso&amp;loop=1&amp;mute=1&amp;showinfo=0&amp;controls=0&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
@@ -179,7 +179,7 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-grey-90 u-section-5" id="sec-9ca2">
+    <section class="u-clearfix u-grey-90 u-section-5" id="sec-d0a0">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
@@ -484,6 +484,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-15.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-13.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
