--- a/ru.html
+++ b/ru.html
@@ -314,7 +314,7 @@
       <div class="u-layout-grid u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1" data-animation-out="0" data-animation-name="customAnimationIn" data-animation-duration="1500">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
+            <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-container-layout-2">
               <img alt="" class="u-image u-image-default u-image-1" data-image-width="720" data-image-height="1080" src="/images/IMG_2350.jpg" data-lang-ru="">
               <div class="u-align-center u-container-style u-grey-90 u-group u-shape-rectangle u-group-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-3">
@@ -342,7 +342,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
             </div>
           </div>
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-out="0">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
+            <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-container-layout-4">
               <img alt="" class="u-image u-image-default u-image-2" data-image-width="718" data-image-height="960" src="/images/alex.jpg" data-lang-ru="">
               <div class="u-align-center u-container-style u-grey-90 u-group u-shape-rectangle u-group-3">
                 <div class="u-container-layout u-valign-middle u-container-layout-5">
@@ -371,7 +371,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
             </div>
           </div>
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-out="0">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
+            <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-container-layout-6">
               <img alt="" class="u-image u-image-default u-image-3" data-image-width="720" data-image-height="1080" src="/images/IMG_2276.jpg" data-lang-ru="">
               <div class="u-align-center u-container-style u-grey-90 u-group u-shape-rectangle u-group-4">
                 <div class="u-container-layout u-valign-middle u-container-layout-7">
@@ -400,7 +400,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
             </div>
           </div>
           <div class="u-align-center-xl u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-4" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-out="0">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-8">
+            <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-container-layout-8">
               <img alt="" class="u-image u-image-default u-image-4" data-image-width="720" data-image-height="1080" src="/images/IMG_2337.jpg" data-lang-ru="">
               <div class="u-align-center u-container-style u-grey-90 u-group u-shape-rectangle u-group-5">
                 <div class="u-container-layout u-valign-middle u-container-layout-9">
@@ -428,7 +428,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
             </div>
           </div>
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-5" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-out="0">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-10">
+            <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-container-layout-10">
               <img alt="" class="u-image u-image-default u-image-5" data-image-width="720" data-image-height="1080" src="/images/IMG_2340.jpg" data-lang-ru="">
               <div class="u-align-center u-container-style u-grey-90 u-group u-shape-rectangle u-group-6">
                 <div class="u-container-layout u-valign-middle u-container-layout-11">
@@ -482,6 +482,6 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-13.png" data-color="" data-lang-ru=""></span>
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 105px; bottom: 80px;" class="u-back-to-top u-file-icon u-hidden-sm u-hidden-xs u-icon u-opacity u-opacity-85 u-text-custom-color-1" data-href="#"><img src="/images/307481.png" alt="" data-original-src="/images/307481-20.png" data-color="" data-lang-ru=""></span>
   
 </body></html>
